@@ -1,7 +1,7 @@
 The Field Class
 ---------------
 
-.. autoclass:: PyPDF2.pdf.Field
+.. autoclass:: PyPDF2.generic.Field
     :members:
     :undoc-members:
     :show-inheritance:
