@@ -1,7 +1,7 @@
 The PdfFileReader Class
 -----------------------
 
-.. autoclass:: PyPDF2.pdf.PdfFileReader
+.. autoclass:: PyPDF2.PdfFileReader
     :members:
     :undoc-members:
     :show-inheritance:
