@@ -1,7 +1,7 @@
 The PdfFileWriter Class
 -----------------------
 
-.. autoclass:: PyPDF2.pdf.PdfFileWriter
+.. autoclass:: PyPDF2.PdfFileWriter
     :members:
     :undoc-members:
     :show-inheritance:
